# Wallet

./: .gitignore  main.py  pyproject.toml
tests/: conftest.py  test_api_endpoints.py  test_service.py  test_transactions_repo.py  test_uow.py  test_users_repo.py  test_wallets_repo.py
wallet/: settings.py
wallet/api/: app.py  dependencies.py  errors_handler.py  models.py
wallet/api/routers/: statistics.py  transactions.py  users.py  wallets.py
wallet/core/: domain.py  errors.py
wallet/core/repository/: repository.py  storage.py
wallet/core/services/: pricing.py  transactions.py  users.py  wallets.py
wallet/infra/pricing/: coinbase.py
wallet/infra/sqlite/: connection.py  setup.py  storage.py
wallet/infra/sqlite/repository/: transactions.py  users.py  wallets.py
