[project]
name = "nand2tetris-starter-py"
version = "0.1.0"
description = "Starter project for Nand 2 Tetris course."
readme = "README.md"
authors = []
dynamic = ["dependencies"]
requires-python = ">=3.13"

[tool.poetry.dependencies]
typer = "*"
fastapi = "^0.128.4"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"
faker = "*"
hypothesis = "*"
httpx = "^0.28.1"
types-requests = "^2.32.4.20260107"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]

[tool.ruff.lint.isort]
forced-separate = ["tests", "n2t"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "tests",
    "n2t/core",
    "n2t/infra",
    "n2t/runner",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true

[tool.pytest]
testpaths = [
    "tests",
]
